Poprawka przy wyświetlaniu zdjęć

--- a/galeria.html
+++ b/galeria.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
         <div class="gallery">
             <div class="image"><span><img src="zdjęcia/zdj-1.jpg" alt="zdjęcia/zdj-1.jpeg"></span></div>
-            <div class="image"><span><img src="zdjęcia/zdj-2.jpe" alt="zdjęcia/zdj-2.jpeg"></span></div>
+            <div class="image"><span><img src="zdjęcia/zdj-2.jpg" alt="zdjęcia/zdj-2.jpeg"></span></div>
             <div class="image"><span><img src="zdjęcia/zdj-3.jpg" alt="zdjęcia/zdj-3.jpeg"></span></div>
             <div class="image"><span><img src="zdjęcia/zdj-4.jpg" alt="zdjęcia/zdj-4.jpeg"></span></div>
             <div class="image"><span><img src="zdjęcia/zdj-5.jpg" alt="zdjęcia/zdj-5.jpeg"></span></div>
