--- a/strona_glowna/index.html
+++ b/strona_glowna/index.html
@@ -21,5 +21,16 @@
             </ul>
         </div>
     </nav>
+
+    <!-- Strona główna  -->
+    <section class="home" id="home">
+        <div class="max-width">
+            <div class="home-content">
+                <div class="text-1">Cześć jestem </div>
+                <div class="text-2">Grześ</div>
+                <div class="text-3">Jestem <span>fotografem</span></div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
