--- a/strona_glowna/index.html
+++ b/strona_glowna/index.html
@@ -6,6 +6,7 @@
     <title>Personal Portfolio Website</title>
     <link rel="stylesheet" href="style_strona_glowna.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </head>
 <body>
     <nav class="navbar">
@@ -34,6 +35,8 @@
     </section>
 
     <p>Miejsce na opis</p>
+    <script src="script_strona_glowna.js"></script>
+    
 
 </body>
 </html>
