Dodanie skalowania interfejsu

--- a/strona_glowna/index.html
+++ b/strona_glowna/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width-Ddevice-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio Website</title>
     <link rel="stylesheet" href="style_strona_glowna.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
@@ -20,6 +20,9 @@
                 <li><a href="#">Grupa</a></li>
                 <li><a href="#">Kontakt</a></li>
             </ul>
+            <div class="menu-btn">
+                <i class="fas fa-bars"></i>
+            </div>
         </div>
     </nav>
 
@@ -34,7 +37,7 @@
         </div>
     </section>
 
-    <p>Miejsce na opis</p>
+    <p>Miejsce na opisMiejsce na opisMiejsce na opisMiejsce na opisMiejsce na opisMiejsce na opisMiejsce na opisMiejsce na opisMiejsce na opisMiejsce na opis</p>
     <script src="script_strona_glowna.js"></script>
     
 
