--- a/strona_glowna/index.html
+++ b/strona_glowna/index.html
@@ -33,6 +33,7 @@
                 <div class="text-1">Cześć jestem </div>
                 <div class="text-2">Grześ</div>
                 <div class="text-3">Jestem <span>fotografem</span></div>
+                <a href="#">Wynajmij mnie</a>
             </div>
         </div>
     </section>
