--- a/strona_glowna/index.html
+++ b/strona_glowna/index.html
@@ -38,6 +38,18 @@
         </div>
     </section>
 
+    <!-- O mnie -->
+    <section class="about" id="about">
+        <div class="max-width">
+            <h2 class="title">O mnie</h2>
+            <div class="about-content">
+                <div class="column left">
+                    <img src="zdj-5.jpg" alt="Zdjęcie profilowe">
+                </div>
+            </div>
+        </div>
+    </section>
+
     <p>Miejsce na opisMiejsce na opisMiejsce na opisMiejsce na opisMiejsce na opisMiejsce na opisMiejsce na opisMiejsce na opisMiejsce na opisMiejsce na opis</p>
     <script src="script_strona_glowna.js"></script>
     
