Gotowa strona główna i o mnie. Dodanie oryginalnych zdjęć

--- a/strona_glowna/index.html
+++ b/strona_glowna/index.html
@@ -31,9 +31,9 @@
         <div class="max-width">
             <div class="home-content">
                 <div class="text-1">Cześć jestem </div>
-                <div class="text-2">Grześ</div>
+                <div class="text-2">Aleksandra</div>
                 <div class="text-3">Jestem <span>fotografem</span></div>
-                <a href="#">Wynajmij mnie</a>
+                <a href="#">Umów się na sesję</a>
             </div>
         </div>
     </section>
@@ -46,11 +46,16 @@
                 <div class="column left">
                     <img src="zdj-5.jpg" alt="Zdjęcie profilowe">
                 </div>
+                <div class="column right">
+                    <div class="text">Jestem Aleksandra i jestem <span>fotografką</span></div>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat vitae blanditiis tenetur officiis quaerat at odit hic. Iure corporis alias, soluta nemo ratione repellendus optio excepturi accusantium in architecto! Inventore.</p>
+                    <a href="#">Download CV</a>
+                </div>
             </div>
         </div>
     </section>
 
-    <p>Miejsce na opisMiejsce na opisMiejsce na opisMiejsce na opisMiejsce na opisMiejsce na opisMiejsce na opisMiejsce na opisMiejsce na opisMiejsce na opis</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, unde. Delectus porro quo voluptatum quidem quia, quae quisquam maiores illum eveniet eum, laboriosam eaque ex dolorem doloribus quasi nostrum totam!</p>
     <script src="script_strona_glowna.js"></script>
     
 
