--- a/strona_glowna/index.html
+++ b/strona_glowna/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio Website</title>
     <link rel="stylesheet" href="style_strona_glowna.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </head>
@@ -50,6 +51,36 @@
                     <div class="text">Jestem Aleksandra i jestem <span>fotografką</span></div>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat vitae blanditiis tenetur officiis quaerat at odit hic. Iure corporis alias, soluta nemo ratione repellendus optio excepturi accusantium in architecto! Inventore.</p>
                     <a href="#">Download CV</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Usługi -->
+    <section class="services" id="services">
+        <div class="max-width">
+            <h2 class="title">Usługi</h2>
+            <div class="services-content">
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-camera"></i>
+                        <div class="text">Sesja plenerowa</div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore nemo maiores impedit magnam in porro ad perspiciatis? Placeat culpa, nesciunt odio natus, quod, odit maiores voluptatem distinctio eius sunt explicabo!</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-camera"></i>
+                        <div class="text">Sesja plenerowa</div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore nemo maiores impedit magnam in porro ad perspiciatis? Placeat culpa, nesciunt odio natus, quod, odit maiores voluptatem distinctio eius sunt explicabo!</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-camera"></i>
+                        <div class="text">Sesja plenerowa</div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore nemo maiores impedit magnam in porro ad perspiciatis? Placeat culpa, nesciunt odio natus, quod, odit maiores voluptatem distinctio eius sunt explicabo!</p>
+                    </div>
                 </div>
             </div>
         </div>
