Finalna wersja usług

--- a/strona_glowna/index.html
+++ b/strona_glowna/index.html
@@ -65,28 +65,27 @@
                     <div class="box">
                         <i class="fas fa-camera"></i>
                         <div class="text">Sesja plenerowa</div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore nemo maiores impedit magnam in porro ad perspiciatis? Placeat culpa, nesciunt odio natus, quod, odit maiores voluptatem distinctio eius sunt explicabo!</p>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-camera"></i>
-                        <div class="text">Sesja plenerowa</div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore nemo maiores impedit magnam in porro ad perspiciatis? Placeat culpa, nesciunt odio natus, quod, odit maiores voluptatem distinctio eius sunt explicabo!</p>
+                        <div class="text">Sesja ciążowa</div>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-camera"></i>
-                        <div class="text">Sesja plenerowa</div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore nemo maiores impedit magnam in porro ad perspiciatis? Placeat culpa, nesciunt odio natus, quod, odit maiores voluptatem distinctio eius sunt explicabo!</p>
+                        <div class="text">Sesja lifestylowa</div>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, unde. Delectus porro quo voluptatum quidem quia, quae quisquam maiores illum eveniet eum, laboriosam eaque ex dolorem doloribus quasi nostrum totam!</p>
     <script src="script_strona_glowna.js"></script>
     
 
