Finalna wersja umiejętności

--- a/strona_glowna/index.html
+++ b/strona_glowna/index.html
@@ -86,6 +86,57 @@
         </div>
     </section>
 
+    <!-- Umiejętności -->
+    <section class="skills" id="skills">
+        <div class="max-width">
+            <h2 class="title">Umiejętności</h2>
+            <div class="skills-content">
+                <div class="column left">
+                    <div class="text">Moje umiejętności i doświadczenie</div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quisquam deleniti perferendis consequatur architecto maiores velit ad ea consequuntur dolores, officiis, possimus cum, commodi amet a beatae repellat et obcaecati.</p>
+                    <a href="#">Czytaj więcej</a>
+                </div>
+                <div class="column right">
+                    <div class="bars">
+                        <div class="info">
+                            <span>Komunikatywność</span>
+                            <span>90%</span>
+                        </div>
+                        <div class="line first"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>Spontaniczność</span>
+                            <span>65%</span>
+                        </div>
+                        <div class="line second"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>Praca światłem</span>
+                            <span>80%</span>
+                        </div>
+                        <div class="line thirth"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>Cierpliwość</span>
+                            <span>70%</span>
+                        </div>
+                        <div class="line fourth"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>Potrzeba rozwoju</span>
+                            <span>95%</span>
+                        </div>
+                        <div class="line fifth"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="script_strona_glowna.js"></script>
     
 
