--- a/strona_glowna/index.html
+++ b/strona_glowna/index.html
@@ -6,8 +6,11 @@
     <title>Personal Portfolio Website</title>
     <link rel="stylesheet" href="style_strona_glowna.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <!-- <script src="https://kit.fontawesome.com/a076d05399.js"></script> -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
 </head>
 <body>
     <nav class="navbar">
@@ -18,7 +21,6 @@
                 <li><a href="#">O mnie</a></li>
                 <li><a href="#">Usługi</a></li>
                 <li><a href="#">Umiejętności</a></li>
-                <li><a href="#">Grupa</a></li>
                 <li><a href="#">Kontakt</a></li>
             </ul>
             <div class="menu-btn">
@@ -131,6 +133,45 @@
                             <span>95%</span>
                         </div>
                         <div class="line fifth"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Przykładowe zdjęcia -->
+    <section class="examples" id="examples">
+        <div class="max-width">
+            <h2 class="title">Przykładowe zdjęcia</h2>
+            <div class="carousel owl-carousel">
+                <div class="card">
+                    <div class="box">
+                        <img src="example1.png" alt="">
+                        <div class="text">Bardzo króti opis zdjęcia</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="example2.png" alt="">
+                        <div class="text">Bardzo króti opis zdjęcia</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="example3.png" alt="">
+                        <div class="text">Bardzo króti opis zdjęcia</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="example4.png" alt="">
+                        <div class="text">Bardzo króti opis zdjęcia</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="example5.png" alt="">
+                        <div class="text">Bardzo króti opis zdjęcia</div>
                     </div>
                 </div>
             </div>
