Animowana ręka swipe nad karuzelą

--- a/strona_glowna/index.html
+++ b/strona_glowna/index.html
@@ -143,6 +143,9 @@
     <section class="examples" id="examples">
         <div class="max-width">
             <h2 class="title">Przykładowe zdjęcia</h2>
+            <div class="hand">
+                <img src="hand.gif">
+            </div>
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
