--- a/strona_glowna/index.html
+++ b/strona_glowna/index.html
@@ -176,6 +176,66 @@
         </div>
     </section>
 
+
+     <!-- Kontakt -->
+     <section class="contact" id="contact">
+        <div class="max-width">
+            <h2 class="title">Zapytaj o wolne terminy</h2>
+            <div class="contact-content">
+                <div class="column left">
+                    <div class="text">Dane kontaktowe</div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis expedita aliquid rerum nihil ex dolorum quas inventore consequatur ad distinctio officiis impedit, qui sint ipsa ducimus aspernatur dolore aliquam natus?</p>
+                    <div class="icons">
+                        <div class="row">
+                            <i class="fas fa-user"></i>
+                            <div class="info">
+                                <div class="head">Imie</div>
+                                <div class="sub-title">Aleksandra M.</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <div class="info">
+                                <div class="head">Adres</div>
+                                <div class="sub-title">Łobżenica</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <i class="fas fa-user"></i>
+                            <div class="info">
+                                <div class="head">E-mail</div>
+                                <div class="sub-title">kontakt@photographerolaa.pl</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="column right">
+                    <div class="text">Skontaktuj się ze mną</div>
+                    <form action="#">
+                        <div class="fields">
+                            <div class="field name">
+                                <input type="text" placeholder="Twoje imie" required>
+                            </div>
+                            <div class="field email">
+                                <input type="text" placeholder="Twój e-mail" required>
+                            </div>
+                            <div class="field">
+                                <input type="text" placeholder="Twoja propozycja terminu dd-mm-rrrr" required>
+                            </div>
+                            <div class="field textarea">
+                                <textarea cols="30" rows="10" placeholder="Krótka notka lub informacja" required></textarea>
+                            </div>
+                            <div class="button">
+                                <button type="submit">Wyślij wiadomość</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+     </section>
+
     <script src="script_strona_glowna.js"></script>
     
 
