--- a/strona_glowna/index.html
+++ b/strona_glowna/index.html
@@ -3,25 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Portfolio Website</title>
+    <title>Ola fotograf</title>
     <link rel="stylesheet" href="style_strona_glowna.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <!-- <script src="https://kit.fontawesome.com/a076d05399.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
 </head>
 <body>
+    <div class="scroll-up-btn">
+        <i class="fas fa-angle-up"></i>
+    </div>
     <nav class="navbar">
         <div class="max-width">
             <div class="logo"><a href="#">Portfol<span>lio.</span></a></div>
             <ul class="menu">
-                <li><a href="#">Strona główna</a></li>
-                <li><a href="#">O mnie</a></li>
-                <li><a href="#">Usługi</a></li>
-                <li><a href="#">Umiejętności</a></li>
-                <li><a href="#">Kontakt</a></li>
+                <li><a href="#home">Strona główna</a></li>
+                <li><a href="#about">O mnie</a></li>
+                <li><a href="#services">Usługi</a></li>
+                <li><a href="#skills">Umiejętności</a></li>
+                <li><a href="#">Galeria</a></li>
+                <li><a href="#contact">Kontakt</a></li>
             </ul>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
@@ -35,7 +40,7 @@
             <div class="home-content">
                 <div class="text-1">Cześć jestem </div>
                 <div class="text-2">Aleksandra</div>
-                <div class="text-3">Jestem <span>fotografem</span></div>
+                <div class="text-3">Jestem <span class="typing-2"></span></div>
                 <a href="#">Umów się na sesję</a>
             </div>
         </div>
@@ -50,7 +55,7 @@
                     <img src="zdj-5.jpg" alt="Zdjęcie profilowe">
                 </div>
                 <div class="column right">
-                    <div class="text">Jestem Aleksandra i jestem <span>fotografką</span></div>
+                    <div class="text">Jestem Aleksandra i jestem <span class="typing"></span></div>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat vitae blanditiis tenetur officiis quaerat at odit hic. Iure corporis alias, soluta nemo ratione repellendus optio excepturi accusantium in architecto! Inventore.</p>
                     <a href="#">Download CV</a>
                 </div>
@@ -233,8 +238,12 @@
                 </div>
             </div>
         </div>
-
      </section>
+
+     <!-- Stopka -->
+     <footer>
+        <span>Created By <a href="#"> Mateusz Łassa </a> | <span class="far fa-copyright"></span> 2022 All rights reserved</span>
+     </footer>
 
     <script src="script_strona_glowna.js"></script>
     
