--- a/galeria/galeria.html
+++ b/galeria/galeria.html
@@ -10,7 +10,7 @@
 <body>
     <div class="wrapper">
         <div class="gallery">
-            <div class="image"><span><img src="zdjęcia/zdj-1.jpg" alt="zdjęcia/zdj-1.jpeg"></span></div>
+            <div class="image"><span><img src="C:\Users\mateu\OneDrive - Politechnika Bydgoska\Studia\Praca inżynierska\Aplikacja\Fotografia\zdj/zdj-1.jpg" alt="zdjęcia/zdj-1.jpeg"></span></div>
             <div class="image"><span><img src="zdjęcia/zdj-2.jpg" alt="zdjęcia/zdj-2.jpeg"></span></div>
             <div class="image"><span><img src="zdjęcia/zdj-3.jpg" alt="zdjęcia/zdj-3.jpeg"></span></div>
             <div class="image"><span><img src="zdjęcia/zdj-4.jpg" alt="zdjęcia/zdj-4.jpeg"></span></div>
