--- a/strona_glowna/index.html
+++ b/strona_glowna/index.html
@@ -19,14 +19,14 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">Portfol<span>lio.</span></a></div>
+            <div class="logo"><a href="#home">Portfol<span>lio.</span></a></div>
             <ul class="menu">
-                <li><a href="#home">Strona główna</a></li>
-                <li><a href="#about">O mnie</a></li>
-                <li><a href="#services">Usługi</a></li>
-                <li><a href="#skills">Umiejętności</a></li>
-                <li><a href="#">Galeria</a></li>
-                <li><a href="#contact">Kontakt</a></li>
+                <li><a href="#home" class="menu-btn">Strona główna</a></li>
+                <li><a href="#about" class="menu-btn">O mnie</a></li>
+                <li><a href="#services" class="menu-btn">Usługi</a></li>
+                <li><a href="#skills" class="menu-btn">Umiejętności</a></li>
+                <li><a href="#" class="menu-btn">Galeria</a></li>
+                <li><a href="#contact" class="menu-btn">Kontakt</a></li>
             </ul>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
