--- a/strona_glowna/index.html
+++ b/strona_glowna/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style_strona_glowna.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <!-- <script src="https://kit.fontawesome.com/a076d05399.js"></script> -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
@@ -25,7 +25,7 @@
                 <li><a href="#about" class="menu-btn">O mnie</a></li>
                 <li><a href="#services" class="menu-btn">Usługi</a></li>
                 <li><a href="#skills" class="menu-btn">Umiejętności</a></li>
-                <li><a href="#" class="menu-btn">Galeria</a></li>
+                <li><a href="#home" class="menu-btn">Galeria</a></li>
                 <li><a href="#contact" class="menu-btn">Kontakt</a></li>
             </ul>
             <div class="menu-btn">
@@ -41,7 +41,7 @@
                 <div class="text-1">Cześć jestem </div>
                 <div class="text-2">Aleksandra</div>
                 <div class="text-3">Jestem <span class="typing-2"></span></div>
-                <a href="#">Umów się na sesję</a>
+                <a href="#contact">Umów się na sesję</a>
             </div>
         </div>
     </section>
