Dodanie php i js do opcji wysyłania wiadomośc

--- a/strona_glowna/index.html
+++ b/strona_glowna/index.html
@@ -208,7 +208,7 @@
                         <div class="row">
                             <i class="fas fa-user"></i>
                             <div class="info">
-                                <div class="head">Imie</div>
+                                <div class="head">Imię</div>
                                 <div class="sub-title">Aleksandra M.</div>
                             </div>
                         </div>
@@ -233,7 +233,7 @@
                     <form action="#">
                         <div class="fields">
                             <div class="field name">
-                                <input type="text" name="imie" placeholder="Twoje imie" required>
+                                <input type="text" name="name" placeholder="Twoje imię" required>
                                 <i class="fas fa-user"></i>
                             </div>
                             <div class="field email">
@@ -254,6 +254,7 @@
                             </div>
                             <div class="button">
                                 <button type="submit">Wyślij wiadomość</button> 
+                                <span>Wysyłanie wiadomości...</span>
                             </div>
                         </div>
                     </form>
@@ -268,7 +269,7 @@
      </footer>
 
     <script src="script_strona_glowna.js"></script>
-    
+    <script src="script_wiadomosc.js"></script>
 
 </body>
 </html>
