Poprawki plików php i js do kontaktu

--- a/strona_glowna/index.html
+++ b/strona_glowna/index.html
@@ -254,7 +254,7 @@
                             </div>
                             <div class="button">
                                 <button type="submit">Wyślij wiadomość</button> 
-                                <span>Wysyłanie wiadomości...</span>
+                                <span></span>
                             </div>
                         </div>
                     </form>
