Nieudana próba spolszczenia wysyłanego formularza

--- a/strona_glowna/index.html
+++ b/strona_glowna/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html xml:lang="pl" lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Ola fotograf</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
