Prawie działająca galeria

--- a/galeria/galeria.html
+++ b/galeria/galeria.html
@@ -1,30 +1,28 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html xml:lang="pl" lang="pl">
 <head>
-    <meta charset="UTF=8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fotografia</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>Ola fotograf - galeria</title>
     <link rel="stylesheet" href="style_galeria.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 </head>
 <body>
     <div class="wrapper">
         <div class="gallery">
-            <div class="image"><span><img src="C:\Users\mateu\OneDrive - Politechnika Bydgoska\Studia\Praca inżynierska\Aplikacja\Fotografia\zdj/zdj-1.jpg" alt="zdjęcia/zdj-1.jpeg"></span></div>
-            <div class="image"><span><img src="zdjęcia/zdj-2.jpg" alt="zdjęcia/zdj-2.jpeg"></span></div>
-            <div class="image"><span><img src="zdjęcia/zdj-3.jpg" alt="zdjęcia/zdj-3.jpeg"></span></div>
-            <div class="image"><span><img src="zdjęcia/zdj-4.jpg" alt="zdjęcia/zdj-4.jpeg"></span></div>
-            <div class="image"><span><img src="zdjęcia/zdj-5.jpg" alt="zdjęcia/zdj-5.jpeg"></span></div>
-            <div class="image"><span><img src="zdjęcia/zdj-6.jpg" alt="zdjęcia/zdj-6.jpeg"></span></div>
+            <div class="image"><span><img src="zdj/zdj-1.jpg" alt="zdjęcia/zdj-1.jpeg"></span></div>
+            <div class="image"><span><img src="zdj/zdj-2.jpg" alt="zdjęcia/zdj-2.jpeg"></span></div>
+            <div class="image"><span><img src="zdj/zdj-3.jpg" alt="zdjęcia/zdj-3.jpeg"></span></div>
+            <div class="image"><span><img src="zdj/zdj-4.jpg" alt="zdjęcia/zdj-4.jpeg"></span></div>
+            <div class="image"><span><img src="zdj/zdj-5.jpg" alt="zdjęcia/zdj-5.jpeg"></span></div>
+            <div class="image"><span><img src="zdj/zdj-6.jpg" alt="zdjęcia/zdj-6.jpeg"></span></div>
         </div>
     </div>
 
     <div class="preview-box">
         <div class="details">
-            <span class="title">
-                Zdjęcie <p class="current-img"></p>
-                z <p class="total-img"></p>
-            </span>
+            <span class="title">Zdjęcie <p class="current-img"></p> z <p class="total-img"></p></span>
             <span class="icon fas fa-times"></span>
         </div>
         <div class="img-box">
@@ -37,7 +35,7 @@
             <img src="" alt="">
         </div>
     </div>
-    <div class="shado"></div>
+    <div class="shadow"></div>
 
     <script src="script_galeria.js"></script>
 </body>
