Poprawnie działająca galeria

--- a/galeria/galeria.html
+++ b/galeria/galeria.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html xml:lang="pl" lang="pl">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Ola fotograf - galeria</title>
     <link rel="stylesheet" href="style_galeria.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+
 </head>
 <body>
     <div class="wrapper">
         <div class="gallery">
-            <div class="image"><span><img src="zdj/zdj-1.jpg" alt="zdjęcia/zdj-1.jpeg"></span></div>
-            <div class="image"><span><img src="zdj/zdj-2.jpg" alt="zdjęcia/zdj-2.jpeg"></span></div>
-            <div class="image"><span><img src="zdj/zdj-3.jpg" alt="zdjęcia/zdj-3.jpeg"></span></div>
-            <div class="image"><span><img src="zdj/zdj-4.jpg" alt="zdjęcia/zdj-4.jpeg"></span></div>
-            <div class="image"><span><img src="zdj/zdj-5.jpg" alt="zdjęcia/zdj-5.jpeg"></span></div>
-            <div class="image"><span><img src="zdj/zdj-6.jpg" alt="zdjęcia/zdj-6.jpeg"></span></div>
+            <div class="image"><span><img src="zdj/zdj-1.jpg" alt=""></span></div>
+            <div class="image"><span><img src="zdj/zdj-2.jpg" alt=""></span></div>
+            <div class="image"><span><img src="zdj/zdj-3.jpg" alt=""></span></div>
+            <div class="image"><span><img src="zdj/zdj-4.jpg" alt=""></span></div>
+            <div class="image"><span><img src="zdj/zdj-6.jpg" alt=""></span></div>
+            <div class="image"><span><img src="zdj/zdj-6.jpg" alt=""></span></div>
         </div>
     </div>
 
@@ -25,18 +25,18 @@
             <span class="title">Zdjęcie <p class="current-img"></p> z <p class="total-img"></p></span>
             <span class="icon fas fa-times"></span>
         </div>
-        <div class="img-box">
+        <div class="image-box">
             <div class="slide prev">
                 <i class="fas fa-angle-left"></i>
             </div>
-            <div class="slide prev">
+            <div class="slide next">
                 <i class="fas fa-angle-right"></i>
             </div>
             <img src="" alt="">
         </div>
     </div>
     <div class="shadow"></div>
-
     <script src="script_galeria.js"></script>
+    
 </body>
 </html>
