--- a/strona_glowna/index.html
+++ b/strona_glowna/index.html
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
-    
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"/>
+
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
@@ -39,7 +40,7 @@
                 <li><a href="#about" class="menu-btn">O mnie</a></li>
                 <li><a href="#services" class="menu-btn">Usługi</a></li>
                 <li><a href="#skills" class="menu-btn">Umiejętności</a></li>
-                <li><a href="#home" class="menu-btn">Galeria</a></li>
+                <li><a href="galeria/galeria.html" class="menu-btn">Galeria</a></li>
                 <li><a href="#contact" class="menu-btn">Kontakt</a></li>
             </ul>
             <div class="menu-btn">
@@ -71,7 +72,7 @@
                 <div class="column right">
                     <div class="text">Jestem Aleksandra i jestem <span class="typing"></span></div>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat vitae blanditiis tenetur officiis quaerat at odit hic. Iure corporis alias, soluta nemo ratione repellendus optio excepturi accusantium in architecto! Inventore.</p>
-                    <a href="#">Download CV</a>
+                    <a href="https://www.instagram.com/photographer_olaa/?hl=pl"><i class="fa-brands fa-instagram"></i> Sprawdź osobiście</a>
                 </div>
             </div>
         </div>
@@ -115,7 +116,7 @@
                 <div class="column left">
                     <div class="text">Moje umiejętności i doświadczenie</div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quisquam deleniti perferendis consequatur architecto maiores velit ad ea consequuntur dolores, officiis, possimus cum, commodi amet a beatae repellat et obcaecati.</p>
-                    <a href="#">Czytaj więcej</a>
+                    <a href="https://www.instagram.com/photographer_olaa/?hl=pl"><i class="fa-brands fa-instagram"></i> Odwiedź mojego Instagrama</a>
                 </div>
                 <div class="column right">
                     <div class="bars">
