--- a/strona_glowna/uploader/uploader.html
+++ b/strona_glowna/uploader/uploader.html
@@ -19,7 +19,7 @@
 
         <section class="progress-area">
             <li class="row">
-                <i class="fas fa-file-alt"></i>
+                <i class="fas duotone fa-file-image"></i>
                 <div class="content">
                     <div class="details">
                         <span class="name">Testowy_plik.jpg ֍ Wysyłanie...</span>
@@ -35,7 +35,7 @@
         <section class="uploaded-area">
             <li class="row">
                 <div class="content">
-                    <i class="fas fa-file-alt"></i>
+                    <i class="fas duotone fa-file-image"></i>
                     <div class="details">
                         <span class="name">Testowy_plik.jpg ֍ Przesłane</span>
                         <span class="size">34 KB</span>
