Działający uploader nie FTP

--- a/strona_glowna/uploader/uploader.html
+++ b/strona_glowna/uploader/uploader.html
@@ -17,22 +17,8 @@
             <i class="fas fa-cloud-upload-alt"></i>
             <p>Wybierz plik</p>
         </form>
-
         <section class="progress-area"></section>
-
-        <section class="uploaded-area">
-            <li class="row">
-                <div class="content">
-                    <i class="fas duotone fa-file-image"></i>
-                    <div class="details">
-                        <span class="name">Testowy_plik.jpg ֍ Przesłane</span>
-                        <span class="size">34 KB</span>
-                    </div>
-                </div>
-                <i class="fas fa-check"></i>
-            </li>
-        </section>
-
+        <section class="uploaded-area"></section>
     </div>
     <script src="script_uploader.js"></script>
 </body>
