Dodanie bookowania poprzez kalendarz Google

--- a/strona_glowna/index.html
+++ b/strona_glowna/index.html
@@ -230,7 +230,19 @@
                     </div>
                 </div>
                 <div class="column right">
-                    <div class="text">Skontaktuj się ze mną</div>
+                    <div class="text">Skontaktuj się ze mną poprzez formularz poniżej <br> lub wybierz termin online w 
+                        <a href="https://calendar.google.com/calendar/selfsched?sstoken=UU9VNUI1MXNwOFFmfGRlZmF1bHR8NmFkZDg0OGQ1MGVmNzBlOWEyMjQ0OTFiZjhkNzM2OGU">kalendarzu Google 
+                            <i class="fas fa-calendar-alt"></i>
+                        </a>
+                    </div>
+                    <div class="explanation">
+                        <div class="tooltip">
+                            <i class="fa-regular fa-circle-question"></i>
+                            <span class="tooltiptext"><b>Formularz</b>- kontakt mailowy poprzez który ustalamy dogodny dla nas termin <br><br><b>Kelendarz Google</b>- kontakt poprzez konto Google <i>(wymagane zalogowanie się do swojego konta Google)</i> i potwierdzenie mailem ze 100% pewnością wybranego terminu</span>
+                        </div>
+                        <i class="fa-solid fa-arrow-left"></i>
+                        wyjaśnienie rónicy
+                    </div>
                     <form action="#">
                         <div class="fields">
                             <div class="field name">
