--- a/strona_glowna/index.html
+++ b/strona_glowna/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Ola fotograf</title>
+    <title>Maria Kapsiak Fotografia</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
@@ -54,7 +54,7 @@
         <div class="max-width">
             <div class="home-content">
                 <div class="text-1">Cześć jestem </div>
-                <div class="text-2">Aleksandra</div>
+                <div class="text-2">Marysia</div>
                 <div class="text-3">Jestem <span class="typing-2"></span></div>
                 <a href="#contact">Umów się na sesję</a>
             </div>
@@ -70,7 +70,7 @@
                     <img src="zdj-5.jpg" alt="Zdjęcie profilowe">
                 </div>
                 <div class="column right">
-                    <div class="text">Jestem Aleksandra i jestem <span class="typing"></span></div>
+                    <div class="text">Jestem Marysia i jestem <span class="typing"></span></div>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat vitae blanditiis tenetur officiis quaerat at odit hic. Iure corporis alias, soluta nemo ratione repellendus optio excepturi accusantium in architecto! Inventore.</p>
                     <a href="https://www.instagram.com/photographer_olaa/?hl=pl"><i class="fa-brands fa-instagram"></i> Sprawdź osobiście</a>
                 </div>
@@ -210,7 +210,7 @@
                             <i class="fas fa-user"></i>
                             <div class="info">
                                 <div class="head">Imię</div>
-                                <div class="sub-title">Aleksandra M.</div>
+                                <div class="sub-title">Maria K.</div>
                             </div>
                         </div>
                         <div class="row">
