--- a/strona_glowna/index.html
+++ b/strona_glowna/index.html
@@ -72,7 +72,7 @@
                 <div class="column right">
                     <div class="text">Jestem Marysia i jestem <span class="typing"></span></div>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat vitae blanditiis tenetur officiis quaerat at odit hic. Iure corporis alias, soluta nemo ratione repellendus optio excepturi accusantium in architecto! Inventore.</p>
-                    <a href="https://www.instagram.com/photographer_olaa/?hl=pl"><i class="fa-brands fa-instagram"></i> Sprawdź osobiście</a>
+                    <a href="https://instagram.com/mariakapsiak.foto?igshid=MzRlODBiNWFlZA=="><i class="fa-brands fa-instagram"></i> Sprawdź osobiście</a>
                 </div>
             </div>
         </div>
@@ -86,24 +86,61 @@
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-camera"></i>
-                        <div class="text">Sesja plenerowa</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <div class="text">Sesja Standardowa</div>
+                        <ul>
+                            <li>Wyjątkowa pamiątka na lata</li>
+                            <li>Niesamowite doświadczenie</li>
+                            <li>Pomoc i wskazówki podczas sesji</li>
+                            <li>Profesjonalna obróbka zdjęć</li>
+                            <li>Możliwość samodzielnego wyboru ujęć</li>
+                            <li>1-2h sesji zdjęciowej </li>
+                            <li>Zdjęcia w formie elektronicznej i drukowanej </li>
+                            <li>Cena zależna od ilości wybranych zdjęć</li>
+                        </ul>
+                        <h4>Cena startowa 100zł +</h4>
+                        <p>Każde zdjęcie 35zł</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-camera"></i>
-                        <div class="text">Sesja ciążowa</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <div class="text">Sesja Bajkowa</div>
+                        <ul>
+                            <li>Magiczny klimat sesji</li>
+                            <li>Niepowtarzalna pamiątka na lata</li>
+                            <li>Niesamowite, bajkowe doświadczenie</li>
+                            <li>Pomoc i wskazówki podczas sesji</li>
+                            <li>Pomoc w doborze stylizacji i charakteryzacji</li>
+                            <li>Niezbędne rekwizyty</li>
+                            <li>Profesjonalna obróbka zdjęć w bajkowym klimacie</li>
+                            <li>Możliwość samodzielnego wyboru ujęć</li>
+                            <li>1-3h sesji zdjęciowej </li>
+                            <li>Zdjęcia w formie elektronicznej i drukowanej </li>
+                            <li>Cena zależna od ilości wybranych zdjęć</li>
+                        </ul>
+                        <h4>Cena startowa 150zł +</h4>
+                        <p>Każde zdjęcie 50zł</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-camera"></i>
-                        <div class="text">Sesja lifestylowa</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <div class="text">Sesja Produktowa</div>
+                        <ul>
+                            <li>Profesjonalne zdjęcia produktowe</li>
+                            <li>Odpowiednio dobrana stylistyka scenerii</li>
+                            <li>Zdjęcia tematyczne lub packshot</li>
+                            <li>Profesjonalna obróbka zdjęć</li>
+                            <li>Zdjęcia w formie elektronicznej</li>
+                            <li>Możliwość wyboru zdjęć</li>
+                            <li>Możliwość wyboru klimatu zdjęć</li>
+                            <li>Cena zależna od ilości wybranych zdjęć</li>
+                        </ul>
+                        <h4>Cena startowa 100zł +</h4>
+                        <p>Każde zdjęcie 25zł</p>
                     </div>
                 </div>
+                
             </div>
         </div>
     </section>
