--- a/strona_glowna/index.html
+++ b/strona_glowna/index.html
@@ -67,7 +67,7 @@
             <h2 class="title">O mnie</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="zdj-5.jpg" alt="Zdjęcie profilowe">
+                    <img src="profilowe.jpg" alt="Zdjęcie profilowe">
                 </div>
                 <div class="column right">
                     <div class="text">Jestem Marysia i jestem <span class="typing"></span></div>
@@ -87,7 +87,7 @@
                     <div class="box">
                         <i class="fas fa-camera"></i>
                         <div class="text">Sesja Standardowa</div>
-                        <ul>
+                        <ul class="sub-points">
                             <li>Wyjątkowa pamiątka na lata</li>
                             <li>Niesamowite doświadczenie</li>
                             <li>Pomoc i wskazówki podczas sesji</li>
@@ -103,9 +103,9 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-camera"></i>
+                        <i class="fa-solid fa-wand-magic-sparkles"></i>
                         <div class="text">Sesja Bajkowa</div>
-                        <ul>
+                        <ul class="sub-points">
                             <li>Magiczny klimat sesji</li>
                             <li>Niepowtarzalna pamiątka na lata</li>
                             <li>Niesamowite, bajkowe doświadczenie</li>
@@ -124,9 +124,9 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-camera"></i>
+                        <i class="fa-solid fa-mug-saucer"></i>
                         <div class="text">Sesja Produktowa</div>
-                        <ul>
+                        <ul class="sub-points">
                             <li>Profesjonalne zdjęcia produktowe</li>
                             <li>Odpowiednio dobrana stylistyka scenerii</li>
                             <li>Zdjęcia tematyczne lub packshot</li>
@@ -153,7 +153,7 @@
                 <div class="column left">
                     <div class="text">Moje umiejętności i doświadczenie</div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quisquam deleniti perferendis consequatur architecto maiores velit ad ea consequuntur dolores, officiis, possimus cum, commodi amet a beatae repellat et obcaecati.</p>
-                    <a href="https://www.instagram.com/photographer_olaa/?hl=pl"><i class="fa-brands fa-instagram"></i> Odwiedź mojego Instagrama</a>
+                    <a target="_blank" rel="noopener noreferrer" href="https://instagram.com/mariakapsiak.foto?igshid=MzRlODBiNWFlZA==" ><i class="fa-brands fa-instagram"></i> Odwiedź mojego Instagrama</a>
                 </div>
                 <div class="column right">
                     <div class="bars">
@@ -254,14 +254,14 @@
                             <i class="fas fa-map-marker-alt"></i>
                             <div class="info">
                                 <div class="head">Adres</div>
-                                <div class="sub-title">Łobżenica</div>
+                                <div class="sub-title">Poznań</div>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-user"></i>
                             <div class="info">
                                 <div class="head">E-mail</div>
-                                <div class="sub-title">kontakt@photographerolaa.pl</div>
+                                <div class="sub-title">kontakt@mariakapsiak.pl</div>
                             </div>
                         </div>
                     </div>
