--- a/strona_glowna/index.html
+++ b/strona_glowna/index.html
@@ -247,7 +247,7 @@
                             <i class="fas fa-user"></i>
                             <div class="info">
                                 <div class="head">Imię</div>
-                                <div class="sub-title">Maria K.</div>
+                                <div class="sub-title">Maria Kapsiak</div>
                             </div>
                         </div>
                         <div class="row">
