Test z kalendarzem Google

--- a/sesje/index.html
+++ b/sesje/index.html
@@ -270,7 +270,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">Skontaktuj się ze mną poprzez formularz poniżej <br> lub wybierz termin online w 
-                        <a href="https://calendar.google.com/calendar/selfsched?sstoken=UU9VNUI1MXNwOFFmfGRlZmF1bHR8NmFkZDg0OGQ1MGVmNzBlOWEyMjQ0OTFiZjhkNzM2OGU">kalendarzu Google 
+                        <a href="https://calendar.google.com/calendar/embed?height=600&wkst=2&bgcolor=%23349e69&ctz=Europe%2FWarsaw&showCalendars=0&showTabs=0&showPrint=0&title=Terminarz&mode=WEEK&src=a29udGFrdEBwaG90b2dyYXBoZXJvbGFhLnBs&color=%23349e69">kalendarzu Google 
                             <i class="fas fa-calendar-alt"></i>
                         </a>
                     </div>
@@ -317,7 +317,7 @@
 
      <!-- Stopka -->
      <footer>
-        <span>Created By <a href="#"> Mateusz Łassa </a> | <span class="far fa-copyright"></span> 2022 All rights reserved</span>
+        <span>Created By <a href="#"> Mateusz Łassa </a> | <span class="far fa-copyright"></span> 2023 All rights reserved</span>
      </footer>
 
     <script src="script_strona_glowna.js"></script>
